# g_seek

./: .env.example  .gitignore  Architecture.md  Dockerfile  README.md  benchmark_skills.py  chainlit.md  docker-compose.ollama.yaml  docker-compose.searxng.yaml  docker-compose.yaml  main.py  my_research_report.md  pr44.diff  pyproject.toml  research_report.md  review_report.md  test_cli_report.md  test_loop_logic.py  test_ollama_conn.py  test_relevance_filtering.py  test_sections.py  test_structured_output.py  tips.md  verify_state_serialization.py  verify_ui.py
deep_research_project/: .env.example  README.md  chainlit_app.py  chainlit_app_v2.py  main.py  requirements.txt  research.md  streamlit_app.py
deep_research_project/config/: config.py  prompts.py
deep_research_project/core/: execution.py  graph.py  graph_state.py  ki_distiller.py  planning.py  prompts.py  reflection.py  reporting.py  research_loop.py  skills_manager.py  state.py  sub_agents.py  utils.py
deep_research_project/tests/: test_cache_manager.py  test_config_security.py  test_config_validation.py  test_content_retriever.py  test_content_retriever_extended.py  test_core_components.py  test_deep_graph.py  test_dynamic_refinement.py  test_gpt5_compatibility.py  test_interruption.py  test_ki_distiller.py  (+26 more)
docs/: architecture_overview.md  chainlit_lessons_learned.md  improvements_and_refactoring.md  streamlit_implementation_plan.md  ui_implementation_plan.md
scripts/: cleanup_domain_skills.py  reset_skills.py  test_hitl_graph.py  test_orchestration.py  test_real_llm_graph.py
searxng/: settings.yml
(+49 files in other folders)
